lab4/LoopyTacoJava2Parser/LoopyTacoJava2Parser.java
/* Generated By:JavaCC: Do not edit this line. LoopyTacoJava2Parser.java */
import syntaxtree.*;
import java.util.Vector;


public class LoopyTacoJava2Parser implements LoopyTacoJava2ParserConstants {

  static final public Goal Goal() throws ParseException {
   MainClass n0;
   NodeListOptional n1 = new NodeListOptional();
   TypeDeclaration n2;
   NodeToken n3;
   Token n4;
    n0 = MainClass();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      n2 = TypeDeclaration();
        n1.addNode(n2);
    }
     n1.nodes.trimToSize();
    n4 = jj_consume_token(0);
      n4.beginColumn++; n4.endColumn++;
      n3 = JTBToolkit.makeNodeToken(n4);
     {if (true) return new Goal(n0,n1,n3);}
    throw new Error("Missing return statement in function");
  }

  static final public MainClass MainClass() throws ParseException {
   NodeToken n0;
   Token n1;
   Identifier n2;
   NodeToken n3;
   Token n4;
   NodeToken n5;
   Token n6;
   NodeToken n7;
   Token n8;
   NodeToken n9;
   Token n10;
   NodeToken n11;
   Token n12;
   NodeToken n13;
   Token n14;
   NodeToken n15;
   Token n16;
   NodeToken n17;
   Token n18;
   NodeToken n19;
   Token n20;
   Identifier n21;
   NodeToken n22;
   Token n23;
   NodeToken n24;
   Token n25;
   NodeListOptional n26 = new NodeListOptional();
   VarDeclaration n27;
   NodeListOptional n28 = new NodeListOptional();
   Statement n29;
   NodeToken n30;
   Token n31;
   NodeToken n32;
   Token n33;
    n1 = jj_consume_token(CLASS);
                n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Identifier();
    n4 = jj_consume_token(LBRACE);
            n3 = JTBToolkit.makeNodeToken(n4);
    n6 = jj_consume_token(PUBLIC);
                 n5 = JTBToolkit.makeNodeToken(n6);
    n8 = jj_consume_token(STATIC);
                 n7 = JTBToolkit.makeNodeToken(n8);
    n10 = jj_consume_token(VOID);
                n9 = JTBToolkit.makeNodeToken(n10);
    n12 = jj_consume_token(MAIN);
                n11 = JTBToolkit.makeNodeToken(n12);
    n14 = jj_consume_token(LPAREN);
             n13 = JTBToolkit.makeNodeToken(n14);
    n16 = jj_consume_token(STRING);
                  n15 = JTBToolkit.makeNodeToken(n16);
    n18 = jj_consume_token(LSQPAREN);
             n17 = JTBToolkit.makeNodeToken(n18);
    n20 = jj_consume_token(RSQPAREN);
             n19 = JTBToolkit.makeNodeToken(n20);
    n21 = Identifier();
    n23 = jj_consume_token(RPAREN);
             n22 = JTBToolkit.makeNodeToken(n23);
    n25 = jj_consume_token(LBRACE);
             n24 = JTBToolkit.makeNodeToken(n25);
    label_2:
    while (true) {
      if (jj_2_1(2147483647)) {
        ;
      } else {
        break label_2;
      }
      n27 = VarDeclaration();
        n26.addNode(n27);
    }
     n26.nodes.trimToSize();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACE:
      case IF:
      case WHILE:
      case FOR:
      case PRINT:
      case SCOMMENT1:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_3;
      }
      n29 = Statement();
        n28.addNode(n29);
    }
     n28.nodes.trimToSize();
    n31 = jj_consume_token(RBRACE);
             n30 = JTBToolkit.makeNodeToken(n31);
    n33 = jj_consume_token(RBRACE);
             n32 = JTBToolkit.makeNodeToken(n33);
     {if (true) return new MainClass(n0,n2,n3,n5,n7,n9,n11,n13,n15,n17,n19,n21,n22,n24,n26,n28,n30,n32);}
    throw new Error("Missing return statement in function");
  }

  static final public TypeDeclaration TypeDeclaration() throws ParseException {
   NodeChoice n0;
   ClassDeclaration n1;
   ClassExtendsDeclaration n2;
    if (jj_2_2(3)) {
      n1 = ClassDeclaration();
        n0 = new NodeChoice(n1, 0);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        n2 = ClassExtendsDeclaration();
        n0 = new NodeChoice(n2, 1);
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
     {if (true) return new TypeDeclaration(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public ClassDeclaration ClassDeclaration() throws ParseException {
   NodeToken n0;
   Token n1;
   Identifier n2;
   NodeToken n3;
   Token n4;
   NodeListOptional n5 = new NodeListOptional();
   VarDeclaration n6;
   NodeListOptional n7 = new NodeListOptional();
   MethodDeclaration n8;
   NodeToken n9;
   Token n10;
    n1 = jj_consume_token(CLASS);
                n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Identifier();
    n4 = jj_consume_token(LBRACE);
            n3 = JTBToolkit.makeNodeToken(n4);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case INTEGER:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_4;
      }
      n6 = VarDeclaration();
        n5.addNode(n6);
    }
     n5.nodes.trimToSize();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_5;
      }
      n8 = MethodDeclaration();
        n7.addNode(n8);
    }
     n7.nodes.trimToSize();
    n10 = jj_consume_token(RBRACE);
             n9 = JTBToolkit.makeNodeToken(n10);
     {if (true) return new ClassDeclaration(n0,n2,n3,n5,n7,n9);}
    throw new Error("Missing return statement in function");
  }

  static final public ClassExtendsDeclaration ClassExtendsDeclaration() throws ParseException {
   NodeToken n0;
   Token n1;
   Identifier n2;
   NodeToken n3;
   Token n4;
   Identifier n5;
   NodeToken n6;
   Token n7;
   NodeListOptional n8 = new NodeListOptional();
   VarDeclaration n9;
   NodeListOptional n10 = new NodeListOptional();
   MethodDeclaration n11;
   NodeToken n12;
   Token n13;
    n1 = jj_consume_token(CLASS);
                n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Identifier();
    n4 = jj_consume_token(EXTENDS);
                  n3 = JTBToolkit.makeNodeToken(n4);
    n5 = Identifier();
    n7 = jj_consume_token(LBRACE);
            n6 = JTBToolkit.makeNodeToken(n7);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
      case INTEGER:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_6;
      }
      n9 = VarDeclaration();
        n8.addNode(n9);
    }
     n8.nodes.trimToSize();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_7;
      }
      n11 = MethodDeclaration();
        n10.addNode(n11);
    }
     n10.nodes.trimToSize();
    n13 = jj_consume_token(RBRACE);
             n12 = JTBToolkit.makeNodeToken(n13);
     {if (true) return new ClassExtendsDeclaration(n0,n2,n3,n5,n6,n8,n10,n12);}
    throw new Error("Missing return statement in function");
  }

  static final public VarDeclaration VarDeclaration() throws ParseException {
   Type n0;
   Identifier n1;
   NodeToken n2;
   Token n3;
    n0 = Type();
    n1 = Identifier();
    n3 = jj_consume_token(SEMICOLON);
            n2 = JTBToolkit.makeNodeToken(n3);
     {if (true) return new VarDeclaration(n0,n1,n2);}
    throw new Error("Missing return statement in function");
  }

  static final public MethodDeclaration MethodDeclaration() throws ParseException {
   NodeToken n0;
   Token n1;
   Type n2;
   Identifier n3;
   NodeToken n4;
   Token n5;
   NodeOptional n6 = new NodeOptional();
   FormalParameterList n7;
   NodeToken n8;
   Token n9;
   NodeToken n10;
   Token n11;
   NodeListOptional n12 = new NodeListOptional();
   VarDeclaration n13;
   NodeListOptional n14 = new NodeListOptional();
   Statement n15;
   NodeToken n16;
   Token n17;
   Identifier n18;
   NodeToken n19;
   Token n20;
   NodeToken n21;
   Token n22;
    n1 = jj_consume_token(PUBLIC);
                 n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Type();
    n3 = Identifier();
    n5 = jj_consume_token(LPAREN);
            n4 = JTBToolkit.makeNodeToken(n5);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOLEAN:
    case INTEGER:
    case IDENTIFIER:
      n7 = FormalParameterList();
        n6.addNode(n7);
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    n9 = jj_consume_token(RPAREN);
            n8 = JTBToolkit.makeNodeToken(n9);
    n11 = jj_consume_token(LBRACE);
             n10 = JTBToolkit.makeNodeToken(n11);
    label_8:
    while (true) {
      if (jj_2_3(2)) {
        ;
      } else {
        break label_8;
      }
      n13 = VarDeclaration();
        n12.addNode(n13);
    }
     n12.nodes.trimToSize();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACE:
      case IF:
      case WHILE:
      case FOR:
      case PRINT:
      case SCOMMENT1:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_9;
      }
      n15 = Statement();
        n14.addNode(n15);
    }
     n14.nodes.trimToSize();
    n17 = jj_consume_token(RETURN);
                  n16 = JTBToolkit.makeNodeToken(n17);
    n18 = Identifier();
    n20 = jj_consume_token(SEMICOLON);
             n19 = JTBToolkit.makeNodeToken(n20);
    n22 = jj_consume_token(RBRACE);
             n21 = JTBToolkit.makeNodeToken(n22);
     {if (true) return new MethodDeclaration(n0,n2,n3,n4,n6,n8,n10,n12,n14,n16,n18,n19,n21);}
    throw new Error("Missing return statement in function");
  }

  static final public FormalParameterList FormalParameterList() throws ParseException {
   FormalParameter n0;
   NodeListOptional n1 = new NodeListOptional();
   FormalParameterRest n2;
    n0 = FormalParameter();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 51:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_10;
      }
      n2 = FormalParameterRest();
        n1.addNode(n2);
    }
     n1.nodes.trimToSize();
     {if (true) return new FormalParameterList(n0,n1);}
    throw new Error("Missing return statement in function");
  }

  static final public FormalParameter FormalParameter() throws ParseException {
   Type n0;
   Identifier n1;
    n0 = Type();
    n1 = Identifier();
     {if (true) return new FormalParameter(n0,n1);}
    throw new Error("Missing return statement in function");
  }

  static final public FormalParameterRest FormalParameterRest() throws ParseException {
   NodeToken n0;
   Token n1;
   FormalParameter n2;
    n1 = jj_consume_token(51);
            n0 = JTBToolkit.makeNodeToken(n1);
    n2 = FormalParameter();
     {if (true) return new FormalParameterRest(n0,n2);}
    throw new Error("Missing return statement in function");
  }

  static final public Type Type() throws ParseException {
   NodeChoice n0;
   ArrayType n1;
   BooleanType n2;
   IntegerType n3;
   Identifier n4;
    if (jj_2_4(3)) {
      n1 = ArrayType();
        n0 = new NodeChoice(n1, 0);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
        n2 = BooleanType();
        n0 = new NodeChoice(n2, 1);
        break;
      case INTEGER:
        n3 = IntegerType();
        n0 = new NodeChoice(n3, 2);
        break;
      case IDENTIFIER:
        n4 = Identifier();
        n0 = new NodeChoice(n4, 3);
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
     {if (true) return new Type(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayType ArrayType() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   NodeToken n4;
   Token n5;
    n1 = jj_consume_token(INTEGER);
              n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(LSQPAREN);
            n2 = JTBToolkit.makeNodeToken(n3);
    n5 = jj_consume_token(RSQPAREN);
            n4 = JTBToolkit.makeNodeToken(n5);
     {if (true) return new ArrayType(n0,n2,n4);}
    throw new Error("Missing return statement in function");
  }

  static final public BooleanType BooleanType() throws ParseException {
   NodeToken n0;
   Token n1;
    n1 = jj_consume_token(BOOLEAN);
                  n0 = JTBToolkit.makeNodeToken(n1);
     {if (true) return new BooleanType(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public IntegerType IntegerType() throws ParseException {
   NodeToken n0;
   Token n1;
    n1 = jj_consume_token(INTEGER);
              n0 = JTBToolkit.makeNodeToken(n1);
     {if (true) return new IntegerType(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public Statement Statement() throws ParseException {
   NodeChoice n0;
   Block n1;
   AssignmentStatements n2;
   IfStatement n3;
   WhileStatement n4;
   ForStatement n5;
   PrintStatement n6;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACE:
      n1 = Block();
        n0 = new NodeChoice(n1, 0);
      break;
    default:
      jj_la1[11] = jj_gen;
      if (jj_2_5(3)) {
        n2 = AssignmentStatements();
        n0 = new NodeChoice(n2, 1);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
          n3 = IfStatement();
        n0 = new NodeChoice(n3, 2);
          break;
        case WHILE:
          n4 = WhileStatement();
        n0 = new NodeChoice(n4, 3);
          break;
        case FOR:
        case SCOMMENT1:
          n5 = ForStatement();
        n0 = new NodeChoice(n5, 4);
          break;
        case PRINT:
          n6 = PrintStatement();
        n0 = new NodeChoice(n6, 5);
          break;
        default:
          jj_la1[12] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
     {if (true) return new Statement(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public AssignmentStatements AssignmentStatements() throws ParseException {
   NodeOptional n0 = new NodeOptional();
   LICAnn n1;
   NodeChoice n2;
   AssignmentStatement n3;
   ArrayAssignmentStatement n4;
   FieldAssignmentStatement n5;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SCOMMENT1:
      n1 = LICAnn();
        n0.addNode(n1);
      break;
    default:
      jj_la1[13] = jj_gen;
      ;
    }
    if (jj_2_6(2)) {
      n3 = AssignmentStatement();
           n2 = new NodeChoice(n3, 0);
    } else if (jj_2_7(2)) {
      n4 = ArrayAssignmentStatement();
           n2 = new NodeChoice(n4, 1);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        n5 = FieldAssignmentStatement();
           n2 = new NodeChoice(n5, 2);
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
     {if (true) return new AssignmentStatements(n0,n2);}
    throw new Error("Missing return statement in function");
  }

  static final public LICAnn LICAnn() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   NodeToken n4;
   Token n5;
    n1 = jj_consume_token(SCOMMENT1);
                    n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(LIC);
              n2 = JTBToolkit.makeNodeToken(n3);
    n5 = jj_consume_token(SCOMMENT2);
                    n4 = JTBToolkit.makeNodeToken(n5);
     {if (true) return new LICAnn(n0,n2,n4);}
    throw new Error("Missing return statement in function");
  }

  static final public Block Block() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeListOptional n2 = new NodeListOptional();
   Statement n3;
   NodeToken n4;
   Token n5;
    n1 = jj_consume_token(LBRACE);
            n0 = JTBToolkit.makeNodeToken(n1);
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACE:
      case IF:
      case WHILE:
      case FOR:
      case PRINT:
      case SCOMMENT1:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_11;
      }
      n3 = Statement();
        n2.addNode(n3);
    }
     n2.nodes.trimToSize();
    n5 = jj_consume_token(RBRACE);
            n4 = JTBToolkit.makeNodeToken(n5);
     {if (true) return new Block(n0,n2,n4);}
    throw new Error("Missing return statement in function");
  }

  static final public AssignmentStatement AssignmentStatement() throws ParseException {
   Identifier n0;
   NodeToken n1;
   Token n2;
   Expression n3;
   NodeToken n4;
   Token n5;
    n0 = Identifier();
    n2 = jj_consume_token(ASSIGN);
            n1 = JTBToolkit.makeNodeToken(n2);
    n3 = Expression();
    n5 = jj_consume_token(SEMICOLON);
            n4 = JTBToolkit.makeNodeToken(n5);
     {if (true) return new AssignmentStatement(n0,n1,n3,n4);}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayAssignmentStatement ArrayAssignmentStatement() throws ParseException {
   Identifier n0;
   NodeToken n1;
   Token n2;
   Identifier n3;
   NodeToken n4;
   Token n5;
   NodeToken n6;
   Token n7;
   ConstOrId n8;
   NodeToken n9;
   Token n10;
    n0 = Identifier();
    n2 = jj_consume_token(LSQPAREN);
            n1 = JTBToolkit.makeNodeToken(n2);
    n3 = Identifier();
    n5 = jj_consume_token(RSQPAREN);
            n4 = JTBToolkit.makeNodeToken(n5);
    n7 = jj_consume_token(ASSIGN);
            n6 = JTBToolkit.makeNodeToken(n7);
    n8 = ConstOrId();
    n10 = jj_consume_token(SEMICOLON);
             n9 = JTBToolkit.makeNodeToken(n10);
     {if (true) return new ArrayAssignmentStatement(n0,n1,n3,n4,n6,n8,n9);}
    throw new Error("Missing return statement in function");
  }

  static final public FieldAssignmentStatement FieldAssignmentStatement() throws ParseException {
   Identifier n0;
   NodeToken n1;
   Token n2;
   Identifier n3;
   NodeToken n4;
   Token n5;
   Identifier n6;
   NodeToken n7;
   Token n8;
    n0 = Identifier();
    n2 = jj_consume_token(DOT);
            n1 = JTBToolkit.makeNodeToken(n2);
    n3 = Identifier();
    n5 = jj_consume_token(ASSIGN);
            n4 = JTBToolkit.makeNodeToken(n5);
    n6 = Identifier();
    n8 = jj_consume_token(SEMICOLON);
            n7 = JTBToolkit.makeNodeToken(n8);
     {if (true) return new FieldAssignmentStatement(n0,n1,n3,n4,n6,n7);}
    throw new Error("Missing return statement in function");
  }

  static final public IfStatement IfStatement() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   Identifier n4;
   NodeToken n5;
   Token n6;
   Statement n7;
   NodeToken n8;
   Token n9;
   Statement n10;
    n1 = jj_consume_token(IF);
             n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(LPAREN);
            n2 = JTBToolkit.makeNodeToken(n3);
    n4 = Identifier();
    n6 = jj_consume_token(RPAREN);
            n5 = JTBToolkit.makeNodeToken(n6);
    n7 = Statement();
    n9 = jj_consume_token(ELSE);
               n8 = JTBToolkit.makeNodeToken(n9);
    n10 = Statement();
     {if (true) return new IfStatement(n0,n2,n4,n5,n7,n8,n10);}
    throw new Error("Missing return statement in function");
  }

  static final public WhileStatement WhileStatement() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   Identifier n4;
   NodeToken n5;
   Token n6;
   Statement n7;
    n1 = jj_consume_token(WHILE);
                n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(LPAREN);
            n2 = JTBToolkit.makeNodeToken(n3);
    n4 = Identifier();
    n6 = jj_consume_token(RPAREN);
            n5 = JTBToolkit.makeNodeToken(n6);
    n7 = Statement();
     {if (true) return new WhileStatement(n0,n2,n4,n5,n7);}
    throw new Error("Missing return statement in function");
  }

  static final public ForStatement ForStatement() throws ParseException {
   NodeOptional n0 = new NodeOptional();
   LoopAnnotation n1;
   NodeToken n2;
   Token n3;
   NodeToken n4;
   Token n5;
   Identifier n6;
   NodeToken n7;
   Token n8;
   Expression n9;
   NodeToken n10;
   Token n11;
   Expression n12;
   NodeToken n13;
   Token n14;
   Identifier n15;
   NodeToken n16;
   Token n17;
   Expression n18;
   NodeToken n19;
   Token n20;
   Statement n21;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SCOMMENT1:
      n1 = LoopAnnotation();
        n0.addNode(n1);
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
    n3 = jj_consume_token(FOR);
              n2 = JTBToolkit.makeNodeToken(n3);
    n5 = jj_consume_token(LPAREN);
            n4 = JTBToolkit.makeNodeToken(n5);
    n6 = Identifier();
    n8 = jj_consume_token(ASSIGN);
            n7 = JTBToolkit.makeNodeToken(n8);
    n9 = Expression();
    n11 = jj_consume_token(SEMICOLON);
             n10 = JTBToolkit.makeNodeToken(n11);
    n12 = Expression();
    n14 = jj_consume_token(SEMICOLON);
             n13 = JTBToolkit.makeNodeToken(n14);
    n15 = Identifier();
    n17 = jj_consume_token(ASSIGN);
             n16 = JTBToolkit.makeNodeToken(n17);
    n18 = Expression();
    n20 = jj_consume_token(RPAREN);
             n19 = JTBToolkit.makeNodeToken(n20);
    n21 = Statement();
     {if (true) return new ForStatement(n0,n2,n4,n6,n7,n9,n10,n12,n13,n15,n16,n18,n19,n21);}
    throw new Error("Missing return statement in function");
  }

  static final public LoopAnnotation LoopAnnotation() throws ParseException {
   IndependentIters n0;
    n0 = IndependentIters();
     {if (true) return new LoopAnnotation(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public IndependentIters IndependentIters() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   NodeToken n4;
   Token n5;
    n1 = jj_consume_token(SCOMMENT1);
                    n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(INDEPENDENTITERS);
                           n2 = JTBToolkit.makeNodeToken(n3);
    n5 = jj_consume_token(SCOMMENT2);
                    n4 = JTBToolkit.makeNodeToken(n5);
     {if (true) return new IndependentIters(n0,n2,n4);}
    throw new Error("Missing return statement in function");
  }
